DuPont DevSB/src/objects/pse__WorkQueues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds configuration and state information for the WorkQueueManager</description>
    <fields>
        <fullName>pse__Last_Queue_Manager_Execution__c</fullName>
        <label>Last Queue Manager Execution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Job_ID__c</fullName>
        <label>Scheduled Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Actuals__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Actuals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Backlog__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Billing_Clear__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Billing Clear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Billing_Generation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Billing Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Billing_Invoice__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Billing Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Billing_Recalc__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Billing Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Billing_Release__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Billing Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Billing_Remove__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Billing Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Missing_Time_Cards__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Missing Time Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_RPGPR_Maint__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With RPGPR Maint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_With_Utilization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use With Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Work_Queue_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Work Queue Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Work_Queue_Monitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a second scheduled apex job should be created to monitor the process and auto-correct for any errors/failures and restart the Queue Manager in that event.</description>
        <label>Use Work Queue Monitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Work_Queue_Manager_Max_Threads__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many concurrent batch jobs should the work queue manager submit at once. Current salesforce governor limits restrict this to 5 or less.</description>
        <label>Work Queue Manager Max Threads</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Work_Queue_Manager_Poll_Frequency__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Number of minutes between polling events for the work queue manager.</description>
        <label>Work Queue Manager Poll Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Work_Queue_Monitor_Schedule_ID__c</fullName>
        <description>DEPRECATED</description>
        <inlineHelpText>DEPRECATED</inlineHelpText>
        <label>Work Queue Monitor Schedule ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WorkQueues</label>
</CustomObject>